CMS-3496 Use Java 8 in project. Fixed some more tests.